<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Summary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/headingTxt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hello_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/subHeadingTxt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Here are the answers selected :"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/subHeadingTxt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Who is the best cricketer in the world?"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/subHeadingTxt" />

        <TextView
            android:id="@+id/answer_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGolden"
            android:textSize="@dimen/subHeadingTxt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="What are the colors in the national flag?"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/subHeadingTxt" />

        <TextView
            android:id="@+id/answer_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGolden"
            android:textSize="@dimen/subHeadingTxt"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finish_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_yellow"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/history_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_yellow"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>